--- a/backend/package.json
+++ b/backend/package.json
@@ -19,12 +19,14 @@
     "express": "^4.18.2",
     "graphql": "^16.7.1",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.2"
+    "mongoose": "^7.4.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.7",
+    "@types/uuid": "^9.0.2",
     "typescript": "^5.1.6"
   }
 }
