--- a/frontend_/package.json
+++ b/frontend_/package.json
@@ -13,8 +13,10 @@
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "graphql": "^16.7.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
