--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-static-gzip": "^2.1.7",
     "graphql": "^16.7.1",
     "jsonwebtoken": "^9.0.1",
     "mocha": "^10.2.0",
