--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts"    
+    "start": "tsc  && node ./out/index.js",
+    "dev": "nodemon ./src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tsconfig/node18": "^18.2.2",
+    "@types/node": "^20.8.6",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
+
+
     "@apollo/server": "^4.9.0",
-    "apollo-server": "^3.12.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cheerio": "^1.0.0-rc.12",
@@ -32,11 +38,11 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.4.7",
     "@types/uuid": "^9.0.2",
+    "@tsconfig/node18": "^18.2.2",
+    "@types/node": "^20.8.6",
     "nodemon": "^3.0.1",
-    "typescript": "^5.1.6"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
