--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,8 @@ jobs:
         run: |
           npm install
         working-directory: ./frontend_
+      - name: Start npm server
+        run: |
+          npm run build
+        working-directory: ./frontend_
+
