refactoring startingServer action try 5

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,4 @@ jobs:
         working-directory: ./frontend_
       - name: Build app
         run: npm run build
+        working-directory: ./frontend_
