--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,28 @@
 
 
-FROM docker pull ghcr.io/puppeteer/puppeteer:21.4.1 
-
-ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
-    PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome-stable
 
 
 
-WORKDIR /usr/src/app
 
-COPY package*.json ./
+FROM node:20-alpine
 
-RUN npm ci
-COPY . .
+RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
 
-["tsc", "node", "./out/index.js"]
+WORKDIR /home/node/app
+
+COPY --chown=node:node package*.json ./
+
+USER node
+
+COPY --chown=node:node . .
 
 
+RUN npm install
+
+RUN npx tsc
+
+EXPOSE 4000:4000
+
+# Start the application
+CMD [ "node", "./out/index.js" ]
 
